hphp/hack/test/typecheck/strict_switch/attrib_not_fun_meth.php.exp
File "attrib_not_fun_meth.php", line 5, characters 3-16:
The `__StrictSwitch` attribute cannot be used on a class. (Typing[4231])
