hphp/hack/test/typecheck/strict_switch/attrib_not_fun_meth.php
<?hh

<<file: __EnableUnstableFeatures('strict_switch')>>

<<__StrictSwitch>>
class A {
}
